--- a/services.html
+++ b/services.html
@@ -99,27 +99,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6">
+                                                 <div class="col-lg-4 col-md-6">
                     <div class="single_service text-center">
                         <div class="icon">
-                            <img src="img/svg_icon/android.svg" alt="">
+                            <img src="img/svg_icon/support.svg" alt="">
                         </div>
                         <h3>
-                                Mobile Apps Design
+                                IT Support and Managed Services
                         </h3>
-                        <p>Looking to promote your business through enhanced customer engagement, improved customer experience and increase your brand visibility by developing a customized app for your business today  </p>
+                        <p>Helpdesk support, hardware and software maintenance, network management, and performance monitoring.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single_service text-center">
-                        <div class="icon">
-                            <img src="img/svg_icon/2.svg" alt="">
-                        </div>
-                        <h3>
-                                Web Development
-                        </h3>
-                        <p>Personal Websites, Business Websites, E-commerce Websites, Informational Websites, Social Media Websites, Entertainment Websites, Nonprofit Websites, Forums and Community Websites, Portfolio Websites, Landing Pages, Educational Websites, Government Websites & News Websites      </div>
-                </div>
+                
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service text-center">
                         <div class="icon">
@@ -129,6 +120,51 @@
                                 POS & ERPs
                         </h3>
                         <p>Point Of Sale Softwares for Supermarkets, Cafterias, Chemists and Pharmacy Stores</p>
+                    </div>
+                </div>                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/analytics.svg" alt="">
+                        </div>
+                        <h3>
+                                Data Analytics and Business Intelligence
+                        </h3>
+                        <p>Descriptive Analytics, Diagnostic Analytics, Prescriptive Analytics,Data strategy, data integration, dashboard and reporting solutions, data governance, and predictive analytics.
+
+</p>
+                    </div>
+                </div>               
+                 <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/datacenter.svg" alt="">
+                        </div>
+                        <h3>
+                                Infrastructure Design and Implementation
+                        </h3>
+                        <p>Network design, data center setup, cloud architecture, hardware and software recommendations, and systems integration</p>
+                    </div>
+                </div>
+                                 <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/dtransform.svg" alt="">
+                        </div>
+                        <h3>
+                                Digital Transformation Consulting
+                        </h3>
+                        <p>Process automation, adoption of new digital tools, workforce training, and implementing agile and innovative workflows.</p>
+                    </div>
+                </div>
+                 <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/csecurity.svg" alt="">
+                        </div>
+                        <h3>
+                                Cybersecurity Consulting
+                        </h3>
+                        <p>Security audits, risk assessments, network security, data protection, cybersecurity policies, and incident response planning.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -153,6 +189,7 @@
                         <p>Offering serivices on Computers, laptops, printers repairs and Servicing & Software installations</p>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service text-center">
                         <div class="icon">
@@ -164,6 +201,41 @@
                         <p>Internet installation services raging from homes, small scale to large scale firms</p>
                     </div>
 
+                </div>
+                                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/graphix.svg" alt="">
+                        </div>
+                        <h3>
+                                Graphics Design
+                        </h3>
+                        <p>Logo design, brand guidelines, business cards, letterheads,banners, posters, brochures, flyers, and email templates, Magazines, newspapers, books, labels,Signage and exhibition design.
+
+</p>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/android.svg" alt="">
+                        </div>
+                        <h3>
+                                Mobile Apps Design
+                        </h3>
+                        <p>Looking to promote your business through enhanced customer engagement, improved customer experience and increase your brand visibility by developing a customized app for your business today  </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/2.svg" alt="">
+                        </div>
+                        <h3>
+                                Web Development
+                        </h3>
+                        <p>Personal Websites, Business Websites, E-commerce Websites, Informational Websites, Social Media Websites, Entertainment Websites, Nonprofit Websites, Forums and Community Websites, Portfolio Websites, Landing Pages, Educational Websites, Government Websites & News Websites      </div>
                 </div>
             </div>
         </div>
